# flutter_bar

./: .gitignore  .metadata  README.md  pubspec.yaml
.github/workflows/: dart.yml
example/: README.md  pubspec.yaml
example/lib/: date.dart  main.dart  monitor_list.dart  position_list.dart
example/lib/widgets/: current_desktop.dart  current_layout.dart  current_window.dart  date.dart  desktop_names.dart  mem_info.dart  monitor_list.dart  position_list.dart  simple_stream_builder.dart  visible_desktop_names.dart  workspace.dart  workspace_powerline.dart
example/linux/: my_application.cc
example/test/: widget_test.dart
lib/: CAPI.dart  X11.dart  X11Properties.dart  bar.dart  bar_settings.dart  flutter_bar_plugin.dart  monitor.dart  position.dart  powerline.dart  simple_stream_builder.dart  streams.dart  strut.dart  system_info.dart  text.dart
linux/: CMakeLists.txt  dart_ffi.cpp  dart_ffi_entrypoint.cpp  flutter_bar_plugin_plugin.cc  gtk_bridge.cpp  gtk_bridge.h  library.def  util.cpp  util.h  x11_events.cpp
linux/include/flutter_bar_plugin/: flutter_bar_plugin.h
linux/x11/: workspaces_with_windows.cpp  workspaces_with_windows.h
linux/x11/events_listener/: abstract_listener.cpp  abstract_listener.h  cardinal.cpp  cardinal.h  int_array.cpp  int_array.h  string_array.cpp  string_array.h
test/: X11Properties_test.dart  flutter_bar_plugin_test.dart
tests_project/: pubspec.yaml
tests_project/linux/: CMakeLists.txt  my_application.cc
xproperty/: xproperty.py
